...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell1" id="wHQ-oQ-yum">
                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="VERBAL ABILITY" largeTitleDisplayMode="always" id="tdz-aP-e2c">
                        <barButtonItem key="backBarButtonItem" title="back" id="lyp-6g-n4w"/>
                    </navigationItem>
                    <connections>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ekT-ml-yho">
                                <rect key="frame" x="16" y="72" width="343" height="29"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
...
                                                <rect key="frame" x="114" y="0.0" width="107" height="44"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                <state key="normal" title="all">
                                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <state key="normal" title="finish">
                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                    </view>
                    <connections>
                        <outlet property="nextButton" destination="Bqi-HM-NOP" id="3zQ-lv-pRG"/>
                        <outlet property="previousButton" destination="Afr-1g-OuS" id="rGz-bu-GoC"/>
                        <outlet property="questionLabel" destination="ekT-ml-yho" id="8Ic-Mw-5C4"/>
                        <outletCollection property="optionButtons" destination="WVv-Co-Doq" collectionClass="NSMutableArray" id="jE5-Bt-Ba1"/>
...
